feat: add currencies table, entity, repository and update service logic